国际化消息-从数据库加载，如果加载不到走properties，配置基本完成